# SolveLinearMod

./: README.md  pyproject.toml
solveLinearMod/: solvelinmod.py
