[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solveLinearMod"
version = "0.1.0"
description = "Solve linear modular systems with LLL (Robert Xiao's solver), packaged for Sage."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
authors = [
  {name = "Robert Xiao (nneonneo)"},
  {name = "Your Name (packager)"}
]

license = {text = "Original solver by Robert Xiao (nneonneo); packaged for Sage usage."}

[tool.setuptools]
packages = ["solveLinearMod"]

